# lmms-lab-writer

./: .gcloudignore  .gitignore  AGENTS.md  Dockerfile  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: build.yml  ci.yml  lint.yml  publish-aur-source.yml  test.yml
.sisyphus/: boulder.json
apps/desktop/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/scripts/: build-pkg.sh
apps/desktop/src-tauri/src/commands/: latex.rs
apps/desktop/src/app/: globals.css  layout.tsx  page.tsx
apps/desktop/src/components/: external-link-handler.tsx  motion.tsx  recent-projects.tsx
apps/desktop/src/components/auth/: index.ts  login-code-modal.tsx  user-dropdown.tsx
apps/desktop/src/lib/: path.test.ts  path.ts  recent-projects.ts
apps/video/: package.json
apps/video/src/: MarketingVideo.tsx  Root.tsx
apps/web/: ink-drop-preview.html  package.json  tsconfig.json
apps/web/content/docs/: installation.mdx
apps/web/public/: galileo_results.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/components/: docs-sections.tsx  download-sections.tsx  header.tsx  home-sections.tsx  ink-drop-animation.tsx  lightbox.tsx  motion.tsx  paper-demo.tsx  profile-sections.tsx  user-dropdown.tsx
apps/web/src/lib/: i18n.test.ts  i18n.ts  messages.ts  user-cache.ts
docs/: dev.md
scripts/: generate-aur-bin-package.mjs  generate-aur-source-package.mjs  sync-version.mjs
(+91 files in other folders)
