[package]
name = "lmms-lab-writer"
version = "0.1.0"
description = "AI-native LaTeX editor"
authors = ["LMMs Lab"]
edition = "2021"

[lib]
name = "lmms_lab_writer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tokio = { version = "1", features = ["full"] }
notify = "8"
portable-pty = "0.9"
reqwest = { version = "0.13", features = ["json", "stream"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
urlencoding = "2"
encoding_rs = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
